@@ -11,7 +11,7 @@ using System.Text;
 using OpenTK.Graphics.OpenGL;
 using OpenTK.Math;
 
-namespace OpenTK.Fonts
+namespace OpenTK.Graphics
 {
     /// <summary>
     /// Provides text printing through OpenGL 1.1 Display Lists.
